GBL-20585 Added memory settings to surefire plugin to get rid of OOM. Excluded calcite-core due to this bug: https://issues.apache.org/jira/browse/HIVE-8906