@@ -66,6 +66,10 @@
                     <artifactId>bonecp</artifactId>
                     <groupId>com.jolbox</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>calcite-core</artifactId>
+                    <groupId>org.apache.calcite</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -137,9 +141,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.16</version>
+                <version>2.17</version>
                 <configuration>
-                    <forkMode>always</forkMode>
+                    <!-- Hiverunner need this for some queries-->
+                    <forkCount>1C</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -166,6 +173,7 @@
     </build>
 
     <!-- TODO: Remove this when the klarna nexus has added mirroring of these repositories -->
+<!--
     <repositories>
         <repository>
             <releases>
@@ -201,4 +209,5 @@
             <layout>default</layout>
         </repository>
     </repositories>
+-->
 </project>
